1.001 - XXX - Jonathan Yu <jawnsy@cpan.org>

  + Update POD
  + Add dependency on Exporter 5.57 [RT#52656]

1.000 - 02 Dec 2009 - Jonathan Yu <jawnsy@cpan.org>

  + Initial release